--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
 							<span class="icon-phone2"></span>
 						</div>
 						<h3 class="mb-4">Contact Number</h3>
-						<p><a href="mob://8791546048">+91 8791546048</a></p>
+						<p><a href="tel://0101010101">+ 0 101  0101  101</a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
