--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
 								<br>
 								<br>
-								<h2>Data Scientist</h2>
+								<h2>Web Developer</h2>
 								<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 								<!-- <br> -->
 								<p><a href="https://www.linkedin.com/in/mohdaasimansari/"
@@ -229,7 +229,7 @@
 									<div class="col-sm-6 col-md-7">
 										<div class="about-info">
 											<p><span class="title-s">Name: </span> <span>Mohd Aasim Ansari</span></p>
-											<p><span class="title-s">Job Role: </span> <span>Data Scientist</span></p>
+											<p><span class="title-s">Job Role: </span> <span>Web Developer</span></p>
 											<p><span class="title-s">Experience: </span> <span>2 Months</span></p>
 											<p><span class="title-s">Address: </span> <span>Hyderabad,Telanga,
 													India</span></p>
@@ -308,7 +308,7 @@
 									<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI, Looker &amp;
 											Tableau</span></li>
 									<li class="d-flex"><span>Other Skills:</span> <span>Cloud, Excel, Git, Google
-											Analytics &amp; SEO</span></li>
+											Cloud &amp; SEO</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Traveling, Coding, Reading</span>
 									</li>
 
@@ -428,7 +428,7 @@
 
 			<div class="row justify-content-center mt-5">
 				<div class="col-md-6 text-center ftco-animate">
-					<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+					<p><a href="https://drive.google.com/file/d/1LsOb16GLA_J68_1z-xPV0mNLqhJMOiTI/view?usp=drivesdk" class="btn btn-primary py-4 px-5">Download CV</a></p>
 				</div>
 			</div>
 		</div>
@@ -442,7 +442,7 @@
 				<div class="col-md-7 heading-section text-center ftco-animate">
 					<h1 class="big big-2">Projects</h1>
 					<h2 class="mb-4">Projects</h2>
-					<p>Below are the sample Data Analytics projects on SQL, Python, Power BI & ML.</p>
+					<p>Below are the sample Projects on Java, SQL, Python, Power BI & ML.</p>
 				</div>
 			</div>
 			<div class="row d-flex">
