--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
 
 									I am a firm believer of passion and determination can lead you to success.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
-									<li class="d-flex"><span>Profile:</span> <span>Data Scientist &amp; Web
-											Developer</span></li>
+									<li class="d-flex"><span>Profile:</span> <span>Web Developer &amp; Data
+											Scientist</span></li>
 									<li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce, BFSI &amp; Digital
 											Marketing</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Technology</span></li>
