--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 
 			<div class="row justify-content-center mt-5">
 				<div class="col-md-6 text-center ftco-animate">
-					<p><a href="https://drive.google.com/file/d/1LsOb16GLA_J68_1z-xPV0mNLqhJMOiTI/view?usp=drivesdk" class="btn btn-primary py-4 px-5">Download CV</a></p>
+					<p><a href="https://drive.google.com/file/d/1CXeIItRgvHFIfUGGA6rgYvLSLp67H2Pr/view?usp=drivesdk">Download CV</a></p>
 				</div>
 			</div>
 		</div>
@@ -608,7 +608,7 @@
 							<span class="icon-phone2"></span>
 						</div>
 						<h3 class="mb-4">Contact Number</h3>
-						<p><a href="tel://0101010101">+ 0 101  0101  101</a></p>
+						<p><a href="tel://8791546048">+ 0 101  0101  101</a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -626,7 +626,7 @@
 							<span class="icon-globe"></span>
 						</div>
 						<h3 class="mb-4">Download Resume</h3>
-						<p><a href="https://drive.google.com/file/d/1LsOb16GLA_J68_1z-xPV0mNLqhJMOiTI/view?usp=drivesdk">resumelink</a></p>
+						<p><a href="https://drive.google.com/file/d/1CXeIItRgvHFIfUGGA6rgYvLSLp67H2Pr/view?usp=drivesdk">resumelink</a></p>
 					</div>
 				</div>
 
