--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 
 			<div class="row justify-content-center mt-5">
 				<div class="col-md-6 text-center ftco-animate">
-					<p><a href="https://drive.google.com/file/d/1CXeIItRgvHFIfUGGA6rgYvLSLp67H2Pr/view?usp=drivesdk">Download CV</a></p>
+					<p><a href="https://drive.google.com/file/d/1CXeIItRgvHFIfUGGA6rgYvLSLp67H2Pr/view?usp=drivesdk class="btn-primary py-4 px-5">Download CV</a></p>
 				</div>
 			</div>
 		</div>
